<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="todo_cell_title_tools_text">Title</string>
    <string name="todo_date_tools_text">17/05/2024</string>
    <string name="todo_detail_title_sample">Todo app design</string>
    <string name="todo_date_time_tv_text">add date/time</string>
    <string name="delete_note_button_content_description">Button to delete the note</string>
    <string name="edit_note_content_view_description">Button to edit the todo</string>
    <string name="validate_todo_button_text">Mark Completed</string>
    <string name="lorem_ipsum_sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

</resources>