<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/action_linear_layout"
        android:orientation="vertical"
        android:background="@color/black">

        <TextView
            android:id="@+id/todo_detail_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_detail_title_sample"
            android:textSize="30sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/app_principal_color" />

        <TextView
            android:id="@+id/todo_detail_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/todo_date_time_tv_text"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/baseline_calendar_today_24"
            app:drawableTint="@color/yellow_note_bg" />

        <TextView
            android:id="@+id/todo_detail_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lorem_ipsum_sample_text"
            android:padding="30dp"
            android:textSize="20sp"
            android:textColor="@color/app_principal_color"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/action_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/black"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:weightSum="1">

        <ImageView
            android:id="@+id/delete_todo_image_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_delete_24"
            android:contentDescription="@string/delete_note_button_content_description"
            android:layout_weight="0.2"
            app:tint="@color/yellow_note_bg"/>

        <ImageView
            android:id="@+id/edit_todo_image_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_edit_24"
            android:contentDescription="@string/edit_note_content_view_description"
            android:layout_weight="0.2"
            app:tint="@color/yellow_note_bg"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>

        <Button
            android:id="@+id/validate_todo_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/app_principal_color"
            android:text="@string/validate_todo_button_text"
            android:textColor="@color/black"
            android:drawableTint="@color/black"
            android:drawableLeft="@drawable/baseline_check_24"
            android:layout_weight="0.2"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>